# micrograd

./: CHANGES.md  Makefile  README.md  dune-project  index.html  micrograd-tests.opam  micrograd.opam
.github/workflows/: ci.yml  deploy-odoc.yml  more-ci.yml
lib/micrograd/src/: appendable_list.ml  dune  layer.ml  layer.mli  micrograd.ml  micrograd.mli  mlp.ml  mlp.mli  neuron.ml  neuron.mli  value.ml  value.mli
lib/micrograd/test/: dune  test__micrograd.ml  test__mlp.ml  test__value.ml
micrograd/: db.js  index.html
micrograd/Micrograd/: index.html
micrograd/Micrograd/Appendable_list/: index.html
micrograd/Micrograd/Layer/: index.html
micrograd/Micrograd/Mlp/: index.html
micrograd/Micrograd/Neuron/: index.html
micrograd/Micrograd/Value/: index.html
micrograd/Micrograd/Value/Expression/: index.html
micrograd/Micrograd/Value/With_tensor/: index.html
micrograd/Micrograd/Value/With_tensor/Expression/: index.html
src/: appendable_list.mli  dune  layer.ml  layer.mli  mlp.ml  mlp.mli  neuron.ml  neuron.mli  value.ml  value.mli
test/: dune  test__mlp.ml  test__neuron.ml  test__tensor.ml  test__value.ml
